--- a/css/main.css
+++ b/css/main.css
@@ -996,12 +996,12 @@ figcaption {
 
 .float-left {
 	float: left;
-	padding-right: 1.5em;
+	padding: .35em 1.5em 0 0;
 }
 
 .float-right {
 	float: right;
-	padding-left: 1.5em;
+	padding-left: .35em 0 0 1.5em;
 }
 
 .maincaption {
@@ -1009,7 +1009,7 @@ figcaption {
 	line-height: 1.625em;
 	letter-spacing: .01em;
 	font-size: .85em;
-	padding-bottom: 2em;
+	padding: 0 .5em 2em 0;
 	font-style: italic;
 	font-weight: 300;
 }
